Bug 85554 - Missing draw object.(Data loss)
Summary: Missing draw object.(Data loss)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha1
Hardware: x86 (IA32) Windows (All)
: medium critical
Assignee: Miklos Vajna
URL:
Whiteboard: odf target:4.4.0
Keywords: bibisected, dataLoss, regression
Depends on:
Blocks:
 
Reported: 2014-10-28 13:02 UTC by baffclan
Modified: 2019-11-06 11:51 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Attachment ODT file (9.85 KB, application/vnd.oasis.opendocument.text)
2014-10-28 13:02 UTC, baffclan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description baffclan 2014-10-28 13:02:23 UTC
Created attachment 108571 [details]
Attachment ODT file

LibreOffice 4.4.0.0.a1 Win-X86 on Windoes7(64)-JA
Version: 4.4.0.0.alpha1
Build ID: e73cb2cc40530caa75d588833c4b690e4f49f630

Steps to Reproduce:
1. Start LibO-Dev
2. Open attachment ODT file
3. Open Draw toolbar
4. Drow a "Basic Shape Object" (e.g, Square)
5. Click a Save icon on menubar
6. Exit LibO
7. Start LibO-Dev again
8. Open a saved ODT file


Actual Results: 
Open a odf file with not new "Basic Shape Object".

Expected Results: 
Open a odt file with a new "Basic Shape Object".
Comment 1 sophie 2014-10-28 13:39:06 UTC
Hi, I'm able to reproduce with your document but not with a new one using Version: 4.4.0.0.alpha1+
Build ID: 7ef698355ad59c6fa263daa4ded124cf512e8926
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-10-27_09:37:25 on Ubunt 14.04 x64. I let somebody else test it with a new document under Windows. Sophie
Comment 2 Kevin Suo 2014-10-30 06:59:40 UTC
I can also reproduce using the attached odt file, but can not reproduce from a new one.

Set to NEW.
Dataloss - Critical.
Comment 3 Kevin Suo 2014-10-30 07:02:37 UTC
Works fine in
Version: 4.3.3.1
Build ID: 7d55112667c8fcddb67bc3803796b46c93aa56b0

Regression
Comment 4 baffclan 2014-10-30 10:25:25 UTC
sophie, Kevin Suo
Thanks for testing and a comments.

Steps to create a reproduced file:
1. Start LibO-Dev
2. Create: "Writer Document"
3. make a "Basic Shape Object" (e.g, Diamond)
4. Click Diamond Object and add a TextBox (Open context menu "Add Text Box")
5. input text in TextBox (e.g, "Basic Shape 01" in TextBox)
6. Save and Exit LibO
7. Start LibO-Dev again
8. Open a saved ODT file
Comment 5 Michael Stahl 2014-11-10 22:02:08 UTC
the added shape is not exported to ODF.

bibisected to 2014-06-03
 acdff9f9763847c992e0853022896cff781c5ffe..418c5f7a4911bb2f1a06858556131b1bc4ad54f6

this one looks highly suspicious:

commit 9d310ecfce3c2fc481b125e1493a534e2107a68e
Author:     Miklos Vajna <vmiklos@collabora.co.uk>
AuthorDate: Mon Jun 2 10:18:26 2014 +0200

    sw textboxes: implement ODF import/export
Comment 6 Miklos Vajna 2014-11-20 13:44:33 UTC
Problem is that in the past, the ZOrder of the two shapes were 0 and 1, but in case the first shape has a TextBox, then now the ZOrder is 0 and 2, while the ODF exporter expects that the ZOrder is always < the number of all draw objects on the draw shape, I'll take care of this.
Comment 7 Commit Notification 2014-11-20 15:58:49 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=01fc08c0b5c57fef8ad3755672f4266d85e849a5

fdo#85554 SwXShape: fix getting ZOrder property when doc contains TextBoxes

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 baffclan 2014-11-22 07:49:46 UTC
Thanks for fixing this.
Cannot reproduce with 4.5.0.0.alpha0+.

Version: 4.5.0.0.alpha0+
Build ID: a81027b13f1696c1cb2e8bcae3d712a193ff2dfd
TinderBox: Win-x86@51-TDF, Branch:MASTER, Time: 2014-11-21_23:15:55
Locale: ja_JP

-> v.
Comment 9 Robinson Tryon (qubit) 2015-12-17 08:38:06 UTC Comment hidden (obsolete)