fdo#85554 SwXShape: fix getting ZOrder property when doc contains TextBoxes

Change-Id: I9b6b83f0f6d627bb14a880a19769ee70564cf52b